@@ -85,6 +85,7 @@ import tech.pegasys.teku.spec.util.DataStructureUtil;
 import tech.pegasys.teku.storage.api.OnDiskStoreData;
 import tech.pegasys.teku.storage.api.StorageUpdate;
 import tech.pegasys.teku.storage.api.WeakSubjectivityUpdate;
+import tech.pegasys.teku.storage.archive.fsarchive.FileSystemArchive;
 import tech.pegasys.teku.storage.client.RecentChainData;
 import tech.pegasys.teku.storage.server.Database;
 import tech.pegasys.teku.storage.server.DatabaseContext;
@@ -124,20 +125,24 @@ public class DatabaseTest {
   private StateStorageMode storageMode;
   private StorageSystem storageSystem;
   private Database database;
+  private FileSystemArchive fileSystemDataArchive;
   private RecentChainData recentChainData;
   private UpdatableStore store;
   private final List<StorageSystem> storageSystems = new ArrayList<>();
 
   @BeforeEach
-  public void setup() {
+  public void setup() throws IOException {
     setupWithSpec(TestSpecFactory.createMinimalDeneb());
   }
 
-  private void setupWithSpec(final Spec spec) {
+  private void setupWithSpec(final Spec spec) throws IOException {
     this.spec = spec;
     this.dataStructureUtil = new DataStructureUtil(spec);
     this.chainBuilder = ChainBuilder.create(spec, VALIDATOR_KEYS);
     this.chainProperties = new ChainProperties(spec);
+    final Path blobsArchive = Files.createTempDirectory("blobs");
+    tmpDirectories.add(blobsArchive.toFile());
+    this.fileSystemDataArchive = new FileSystemArchive(blobsArchive);
     genesisBlockAndState = chainBuilder.generateGenesis(genesisTime, true);
     genesisCheckpoint = getCheckpointForBlock(genesisBlockAndState.getBlock());
     genesisAnchor = AnchorPoint.fromGenesisState(spec, genesisBlockAndState.getState());
@@ -298,7 +303,10 @@ public class DatabaseTest {
             List.of(blobSidecar5_0)));
 
     // let's prune with limit to 1
-    assertThat(database.pruneOldestBlobSidecars(UInt64.MAX_VALUE, 1)).isTrue();
+    assertThat(
+            database.pruneOldestBlobSidecars(
+                UInt64.MAX_VALUE, 1, fileSystemDataArchive.getBlobSidecarWriter()))
+        .isTrue();
     assertBlobSidecarKeys(
         blobSidecar2_0.getSlot(),
         blobSidecar5_0.getSlot(),
@@ -314,8 +322,14 @@ public class DatabaseTest {
     assertThat(database.getEarliestBlobSidecarSlot()).contains(UInt64.valueOf(2));
     assertThat(database.getBlobSidecarColumnCount()).isEqualTo(4L);
 
+    // check if the pruned blob was written to disk. Not validating contents here.
+    assertThat(getSlotBlobsArchiveFile(blobSidecar1_0)).exists();
+    assertThat(getSlotBlobsArchiveFile(blobSidecar2_0)).doesNotExist();
+
     // let's prune up to slot 1 (nothing will be pruned)
-    assertThat(database.pruneOldestBlobSidecars(ONE, 10)).isFalse();
+    assertThat(
+            database.pruneOldestBlobSidecars(ONE, 10, fileSystemDataArchive.getBlobSidecarWriter()))
+        .isFalse();
     assertBlobSidecarKeys(
         blobSidecar2_0.getSlot(),
         blobSidecar5_0.getSlot(),
@@ -332,19 +346,37 @@ public class DatabaseTest {
     assertThat(database.getBlobSidecarColumnCount()).isEqualTo(4L);
 
     // let's prune all from slot 4 excluded
-    assertThat(database.pruneOldestBlobSidecars(UInt64.valueOf(3), 10)).isFalse();
+    assertThat(
+            database.pruneOldestBlobSidecars(
+                UInt64.valueOf(3), 10, fileSystemDataArchive.getBlobSidecarWriter()))
+        .isFalse();
     assertBlobSidecarKeys(
         blobSidecar1_0.getSlot(), blobSidecar5_0.getSlot(), blobSidecarToKey(blobSidecar5_0));
     assertBlobSidecars(Map.of(blobSidecar5_0.getSlot(), List.of(blobSidecar5_0)));
     assertThat(database.getEarliestBlobSidecarSlot()).contains(UInt64.valueOf(4));
     assertThat(database.getBlobSidecarColumnCount()).isEqualTo(1L);
 
+    // check if the pruned blob was written to disk. Not validating contents here.
+    assertThat(getSlotBlobsArchiveFile(blobSidecar2_0)).exists();
+    assertThat(getSlotBlobsArchiveFile(blobSidecar3_0)).exists();
+    assertThat(getSlotBlobsArchiveFile(blobSidecar5_0)).doesNotExist();
+
     // let's prune all
-    assertThat(database.pruneOldestBlobSidecars(UInt64.valueOf(5), 1)).isTrue();
+    assertThat(
+            database.pruneOldestBlobSidecars(
+                UInt64.valueOf(5), 1, fileSystemDataArchive.getBlobSidecarWriter()))
+        .isTrue();
     // all empty now
     assertBlobSidecarKeys(ZERO, UInt64.valueOf(10));
     assertThat(database.getEarliestBlobSidecarSlot()).contains(UInt64.valueOf(6));
     assertThat(database.getBlobSidecarColumnCount()).isEqualTo(0L);
+
+    // check if the pruned blob was written to disk. Not validating contents here.
+    assertThat(getSlotBlobsArchiveFile(blobSidecar5_0)).exists();
+  }
+
+  private File getSlotBlobsArchiveFile(final BlobSidecar blobSidecar) {
+    return fileSystemDataArchive.resolve(blobSidecar.getSlotAndBlockRoot());
   }
 
   @TestTemplate
@@ -443,7 +475,10 @@ public class DatabaseTest {
             List.of(blobSidecar5_0)));
 
     // Pruning with a prune limit set to 1: Only blobSidecar1 will be pruned
-    assertThat(database.pruneOldestNonCanonicalBlobSidecars(UInt64.MAX_VALUE, 1)).isTrue();
+    assertThat(
+            database.pruneOldestNonCanonicalBlobSidecars(
+                UInt64.MAX_VALUE, 1, fileSystemDataArchive.getBlobSidecarWriter()))
+        .isTrue();
     assertNonCanonicalBlobSidecarKeys(
         blobSidecar2_0.getSlot(),
         blobSidecar5_0.getSlot(),
@@ -457,9 +492,16 @@ public class DatabaseTest {
             blobSidecar3_0.getSlot(), List.of(blobSidecar3_0),
             blobSidecar5_0.getSlot(), List.of(blobSidecar5_0)));
     assertThat(database.getNonCanonicalBlobSidecarColumnCount()).isEqualTo(4L);
+
+    // check if the pruned blob was written to disk. Not validating contents here.
+    assertThat(getSlotBlobsArchiveFile(blobSidecar1_0)).exists();
+    assertThat(getSlotBlobsArchiveFile(blobSidecar2_0)).doesNotExist();
 
     // Pruning up to slot 1: No blobs pruned
-    assertThat(database.pruneOldestNonCanonicalBlobSidecars(ONE, 10)).isFalse();
+    assertThat(
+            database.pruneOldestNonCanonicalBlobSidecars(
+                ONE, 10, fileSystemDataArchive.getBlobSidecarWriter()))
+        .isFalse();
     assertNonCanonicalBlobSidecarKeys(
         blobSidecar2_0.getSlot(),
         blobSidecar5_0.getSlot(),
@@ -474,18 +516,36 @@ public class DatabaseTest {
             blobSidecar5_0.getSlot(), List.of(blobSidecar5_0)));
     assertThat(database.getNonCanonicalBlobSidecarColumnCount()).isEqualTo(4L);
 
+    // check if the pruned blob was written to disk. Not validating contents here.
+    assertThat(getSlotBlobsArchiveFile(blobSidecar1_0)).exists();
+    assertThat(getSlotBlobsArchiveFile(blobSidecar2_0)).doesNotExist();
+
     // Prune blobs up to slot 3
-    assertThat(database.pruneOldestNonCanonicalBlobSidecars(UInt64.valueOf(3), 10)).isFalse();
+    assertThat(
+            database.pruneOldestNonCanonicalBlobSidecars(
+                UInt64.valueOf(3), 10, fileSystemDataArchive.getBlobSidecarWriter()))
+        .isFalse();
     assertNonCanonicalBlobSidecarKeys(
         blobSidecar1_0.getSlot(), blobSidecar5_0.getSlot(), blobSidecarToKey(blobSidecar5_0));
     assertNonCanonicalBlobSidecars(Map.of(blobSidecar5_0.getSlot(), List.of(blobSidecar5_0)));
     assertThat(database.getNonCanonicalBlobSidecarColumnCount()).isEqualTo(1L);
 
+    // check if the pruned blob was written to disk. Not validating contents here.
+    assertThat(getSlotBlobsArchiveFile(blobSidecar2_0)).exists();
+    assertThat(getSlotBlobsArchiveFile(blobSidecar3_0)).exists();
+    assertThat(getSlotBlobsArchiveFile(blobSidecar5_0)).doesNotExist();
+
     // Pruning all blobs
-    assertThat(database.pruneOldestNonCanonicalBlobSidecars(UInt64.valueOf(5), 1)).isTrue();
+    assertThat(
+            database.pruneOldestNonCanonicalBlobSidecars(
+                UInt64.valueOf(5), 1, fileSystemDataArchive.getBlobSidecarWriter()))
+        .isTrue();
     // No blobs should be left
     assertNonCanonicalBlobSidecarKeys(ZERO, UInt64.valueOf(10));
     assertThat(database.getNonCanonicalBlobSidecarColumnCount()).isEqualTo(0L);
+
+    // check if the pruned blob was written to disk. Not validating contents here.
+    assertThat(getSlotBlobsArchiveFile(blobSidecar5_0)).exists();
   }
 
   @TestTemplate
@@ -2176,7 +2236,7 @@ public class DatabaseTest {
 
   @TestTemplate
   public void addSidecar_isOperative(final DatabaseContext context) throws IOException {
-    setupWithSpec(TestSpecFactory.createMinimalEip7594());
+    setupWithSpec(TestSpecFactory.createMinimalElectraEip7594());
     initialize(context);
     final DataColumnSidecar dataColumnSidecar = dataStructureUtil.randomDataColumnSidecar();
     final DataColumnSlotAndIdentifier columnSlotAndIdentifier =
@@ -2190,7 +2250,7 @@ public class DatabaseTest {
   @TestTemplate
   public void setFirstCustodyIncompleteSlot_isOperative(final DatabaseContext context)
       throws IOException {
-    setupWithSpec(TestSpecFactory.createMinimalEip7594());
+    setupWithSpec(TestSpecFactory.createMinimalElectraEip7594());
     initialize(context);
     assertThat(database.getFirstCustodyIncompleteSlot().isEmpty()).isTrue();
 
@@ -2202,7 +2262,7 @@ public class DatabaseTest {
   @TestTemplate
   public void setFirstSamplerIncompleteSlot_isOperative(final DatabaseContext context)
       throws IOException {
-    setupWithSpec(TestSpecFactory.createMinimalEip7594());
+    setupWithSpec(TestSpecFactory.createMinimalElectraEip7594());
     initialize(context);
     assertThat(database.getFirstSamplerIncompleteSlot().isEmpty()).isTrue();
 
@@ -2215,7 +2275,7 @@ public class DatabaseTest {
   @SuppressWarnings("JavaCase")
   public void streamDataColumnIdentifiers_isOperative(final DatabaseContext context)
       throws IOException {
-    setupWithSpec(TestSpecFactory.createMinimalEip7594());
+    setupWithSpec(TestSpecFactory.createMinimalElectraEip7594());
     initialize(context);
 
     final SignedBeaconBlockHeader blockHeader1 = dataStructureUtil.randomSignedBeaconBlockHeader();
@@ -2261,7 +2321,7 @@ public class DatabaseTest {
   @TestTemplate
   @SuppressWarnings("JavaCase")
   public void pruneAllSidecars_isOperative(final DatabaseContext context) throws IOException {
-    setupWithSpec(TestSpecFactory.createMinimalEip7594());
+    setupWithSpec(TestSpecFactory.createMinimalElectraEip7594());
     initialize(context);
 
     final SignedBeaconBlockHeader blockHeader1 =
@@ -2492,7 +2552,7 @@ public class DatabaseTest {
     }
 
     // Check that last block
-    final SignedBeaconBlock lastFinalizedBlock = finalizedBlocks.get(finalizedBlocks.size() - 1);
+    final SignedBeaconBlock lastFinalizedBlock = finalizedBlocks.getLast();
     for (int i = 0; i < 10; i++) {
       final UInt64 slot = lastFinalizedBlock.getSlot().plus(i);
       assertThat(database.getLatestFinalizedBlockAtSlot(slot))
@@ -2753,7 +2813,7 @@ public class DatabaseTest {
   }
 
   private void assertBlobSidecarKeys(
-      final UInt64 from, final UInt64 to, SlotAndBlockRootAndBlobIndex... keys) {
+      final UInt64 from, final UInt64 to, final SlotAndBlockRootAndBlobIndex... keys) {
     try (final Stream<SlotAndBlockRootAndBlobIndex> blobSidecarsStream =
         database.streamBlobSidecarKeys(from, to)) {
       final List<SlotAndBlockRootAndBlobIndex> keysFromDb = blobSidecarsStream.collect(toList());
@@ -2762,7 +2822,7 @@ public class DatabaseTest {
   }
 
   private void assertNonCanonicalBlobSidecarKeys(
-      final UInt64 from, final UInt64 to, SlotAndBlockRootAndBlobIndex... keys) {
+      final UInt64 from, final UInt64 to, final SlotAndBlockRootAndBlobIndex... keys) {
     try (final Stream<SlotAndBlockRootAndBlobIndex> blobSidecarsStream =
         database.streamNonCanonicalBlobSidecarKeys(from, to)) {
       final List<SlotAndBlockRootAndBlobIndex> keysFromDb = blobSidecarsStream.collect(toList());
@@ -2778,7 +2838,7 @@ public class DatabaseTest {
 
     final Map<UInt64, List<BlobSidecar>> blobSidecarsDb = new HashMap<>();
     try (final Stream<SlotAndBlockRootAndBlobIndex> blobSidecarsStream =
-        database.streamBlobSidecarKeys(slots.get(0), slots.get(slots.size() - 1))) {
+        database.streamBlobSidecarKeys(slots.getFirst(), slots.getLast())) {
 
       for (final Iterator<SlotAndBlockRootAndBlobIndex> iterator = blobSidecarsStream.iterator();
           iterator.hasNext(); ) {
